# ANN-Classification

./: .gitignore  app.py  app_regression.py  experiments.ipynb  hyper_parameter_tunning.ipynb  model.keras  prediction.ipynb  pyproject.toml  regression_model.keras  salary_regression.ipynb
