[project]
name = "ann-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tensorboard>=2.19.0",
    "tensorflow==2.19.0",
]
